full initial setup for user audit log